Added counsellor's page

--- a/public/questionnaire/q/result.html
+++ b/public/questionnaire/q/result.html
@@ -115,7 +115,7 @@
                 </p>
                 <br><br>
             </p>
-            <button class="but-style" onclick="document.location='/'">Home Page</button>
+            <button class="but-style" onclick="document.location='/gethelp'">Get Help</button>
         </div>
 
         <div class="div-img">
