routing and aesthetic changes

--- a/public/index.html
+++ b/public/index.html
@@ -174,7 +174,7 @@
                     Have no one to talk to? Feel free to contact any of our councellors. They are always here to lend
                     you an ear.
                 </div>
-                <button class="but-style">
+                <button class="but-style" onclick="document.location='/gethelp' " >
                     Take a look !
                 </button>
             </div>
