--- a/public/vent/index.html
+++ b/public/vent/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="heading">
-        <img src="/static/images/logo.jpeg" height="100" alt="">
+        <a href="/"><img class = "logo_img" src="static\counsellor\images\vyavahaar logo.png" alt="logo"></a>
         <h1>Vent out your feelings </h1>
     </div>
 
@@ -51,9 +51,6 @@
 
 
     </div>
-
-
-
 
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase.js"></script>
     <script src="static/vent/app.js"></script>
