--- a/public/index.html
+++ b/public/index.html
@@ -270,7 +270,7 @@
                 <div class="txts">
                     Tired of keeping your troubles to yourself. Shout it out to the world anonymously.
                 </div>
-                <button class="but-style" onclick="document.location='vent/index.html'">
+                <button class="but-style" onclick="document.location='/vent'">
                     Give it a go!
                 </button>
             </div>
