corrected src of images

--- a/public/index.html
+++ b/public/index.html
@@ -194,13 +194,13 @@
 <body>
     
         <div class="topnav">
-            <img class="logo" src="images/logo.jpeg" width="80" height="80" alt="logo">
-            <a href="login.html">Login</a>
+            <img class="logo" src="static/images/logo.jpeg" width="80" height="80" alt="logo">
+            <a href="static/login.html">Login</a>
             <a href="#about">About</a>
             <a class="active" href="#home">Home</a>
         </div>
         <div class="masterimg">
-            <img class="" src="images/v14_1.png"  width = "100%" height="730" alt="Vyavhaar">
+            <img class="" src="static/images/v14_1.png"  width = "100%" height="730" alt="Vyavhaar">
             <div class="v14_2"></div>
             <span class="v14_3">You Are Not Alone</span>
             <span class="v14_4">We’re here to listen</span>
@@ -240,14 +240,14 @@
                 </button>
             </div>
             <div class="imgrgt">
-                <img class="imgr" src="images/v5_8.png" alt="face recon">
+                <img class="imgr" src="static/images/v5_8.png" alt="face recon">
             </div>
         </div>
 
 
         <div class="rwcont">
             <div class="imgrgt">
-                <img class="imgr" src="images/v26_53.png" alt="face recon">
+                <img class="imgr" src="static/images/v26_53.png" alt="face recon">
             </div>
             <div class="txt floatright">
                 <div class="txth">
@@ -275,13 +275,13 @@
                 </button>
             </div>
             <div class="imgrgt">
-                <img class="imgr" src="images/v29_9.png" alt="face recon">
+                <img class="imgr" src="static/images/v29_9.png" alt="face recon">
             </div>
         </div>
 
         <div class="rwcont">
             <div class="imgrgt">
-                <img class="imgr" src="images/v18_1.png" alt="face recon">
+                <img class="imgr" src="static/images/v18_1.png" alt="face recon">
             </div>
             <div class="txt">
                 <div class="txth">
@@ -310,7 +310,7 @@
                 </button>
             </div>
             <div class="imgrgt">
-                <img class="imgr" src="images/v24_3.png" alt="face recon">
+                <img class="imgr" src="static/images/v24_3.png" alt="face recon">
             </div>
         </div>
         <div class="center">
@@ -363,7 +363,7 @@
 
 
     <!-- Custom JavaScript -->
-    <script src="app.js"></script>
+    <script src="static/app.js"></script>
 </body>
 
 </html>
