--- a/public/questionnaire/index.html
+++ b/public/questionnaire/index.html
@@ -87,9 +87,8 @@
     <div class="cont">
         <div class="div-txt">
             <p class="txt"> Questionnaire </p>
-            <p class="txts">Lorem ipsum dolor sit amet, consectetur adipiscing <br> elit. Vivamus dapibus dictum
-                finibus.<br><br> </p>
-            <button class="but-style" onclick="document.location='questionnaire/q'">Get Started</button>
+            <p class="txts">Answer these 21 specially curated questions so that we get a little more insight about your troubles.<br><br> </p>
+            <button class="but-style" onclick="document.location='questionnaire/q'">Take the Test</button>
         </div>
 
         <div class="div-img">
