--- a/public/questionnaire/q/result.html
+++ b/public/questionnaire/q/result.html
@@ -66,7 +66,7 @@
     .forscore{
         font-size: 30px;
         font-weight: 300;
-        color: #30a386;
+        color: #a130a3;
         padding-left: 16px;
         padding-top: 16px;
     }
@@ -115,7 +115,7 @@
                 </p>
                 <br><br>
             </p>
-            <button class="but-style" onclick="document.location='/gethelp'">Get Help</button>
+            <button class="but-style" onclick="document.location='/'">Home Page</button>
         </div>
 
         <div class="div-img">
