--- a/public/index.html
+++ b/public/index.html
@@ -204,20 +204,20 @@
     <div class="topnav">
         <img class="logo" src="static/images/logo.jpeg" width="80" height="80" alt="logo">
         <a href="static/login.html">Login</a>
-        <a href="#about">About</a>
-        <a class="active" href="#home">Home</a>
+        <a href="/about">About</a>
+        <a class=" active " href="#home ">Home</a>
     </div>
-    <div class="masterimg">
-        <img class="" src="static/images/v14_1.png" width="100%" height="730" alt="Vyavhaar">
-        <div class="v14_2"></div>
-        <span class="v14_3">You Are Not Alone</span>
-        <span class="v14_4">We’re here to listen</span>
+    <div class="masterimg ">
+        <img class=" " src="static/images/v14_1.png " width="100% " height="730 " alt="Vyavhaar ">
+        <div class="v14_2 "></div>
+        <span class="v14_3 ">You Are Not Alone</span>
+        <span class="v14_4 ">We’re here to listen</span>
     </div>
-    <div class="cont">
+    <div class="cont ">
 
-        <div class="rwcont">
-            <div class="txt">
-                <div class="txth">
+        <div class="rwcont ">
+            <div class="txt ">
+                <div class="txth ">
                     Say Cheese !
                 </div>
 
@@ -226,101 +226,101 @@
 
         </div>
 
-        <div class="rwcont">
+        <div class="rwcont ">
 
 
 
         </div>
-        <div class="newtxt">Our Services</div>
-        <div class="rwcont">
+        <div class="newtxt ">Our Services</div>
+        <div class="rwcont ">
 
             <br>
-            <div class="txt">
-                <div class="txth">
+            <div class="txt ">
+                <div class="txth ">
                     Say Cheese !
                 </div>
-                <div class="txts">
+                <div class="txts ">
                     Click a photo! Our state of the art face recognition system will identify your emotions and generate a personalised report.
                 </div>
-                <button class="but-style" onclick="checksigninforphoto()">
+                <button class="but-style " onclick="checksigninforphoto() ">
                     Try it now!
                 </button>
             </div>
-            <div class="imgrgt">
-                <img class="imgr" src="static/images/v5_8.png" alt="face recon">
+            <div class="imgrgt ">
+                <img class="imgr " src="static/images/v5_8.png " alt="face recon ">
             </div>
         </div>
 
 
-        <div class="rwcont">
-            <div class="imgrgt">
-                <img class="imgr" src="static/images/v26_53.png" alt="face recon">
+        <div class="rwcont ">
+            <div class="imgrgt ">
+                <img class="imgr " src="static/images/v26_53.png " alt="face recon ">
             </div>
-            <div class="txt floatright">
-                <div class="txth">
+            <div class="txt floatright ">
+                <div class="txth ">
                     Questionnaire
                 </div>
                 <div class="txts ">
                     Answer these personally curated questions so that we get little more insight about your troubles.
                 </div>
-                <button class="but-style" onclick="checksigninforques()">
+                <button class="but-style " onclick="checksigninforques() ">
                     Try the test!
                 </button>
             </div>
         </div>
 
-        <div class="rwcont">
-            <div class="txt">
-                <div class="txth">
+        <div class="rwcont ">
+            <div class="txt ">
+                <div class="txth ">
                     Venting Wall
                 </div>
-                <div class="txts">
+                <div class="txts ">
                     Tired of keeping your troubles to yourself. Shout it out to the world anonymously.
                 </div>
-                <button class="but-style" onclick="document.location='/vent'">
+                <button class="but-style " onclick="document.location='/vent' ">
                     Give it a go!
                 </button>
             </div>
-            <div class="imgrgt">
-                <img class="imgr" src="static/images/v29_9.png" alt="face recon">
+            <div class="imgrgt ">
+                <img class="imgr " src="static/images/v29_9.png " alt="face recon ">
             </div>
         </div>
 
-        <div class="rwcont">
-            <div class="imgrgt">
-                <img class="imgr" src="static/images/v18_1.png" alt="face recon">
+        <div class="rwcont ">
+            <div class="imgrgt ">
+                <img class="imgr " src="static/images/v18_1.png " alt="face recon ">
             </div>
-            <div class="txt">
-                <div class="txth">
+            <div class="txt ">
+                <div class="txth ">
                     Automatic Report Generation
                 </div>
-                <div class="txts">
+                <div class="txts ">
                     You will get a fully personalized report for every test you take.
                 </div>
-                <button class="but-style" onclick="checksigninforques()">
+                <button class="but-style " onclick="checksigninforques() ">
                     Try the test!
                 </button>
             </div>
         </div>
 
-        <div class="rwcont">
-            <div class="txt">
-                <div class="txth">
+        <div class="rwcont ">
+            <div class="txt ">
+                <div class="txth ">
                     Counselling
                 </div>
-                <div class="txts">
+                <div class="txts ">
                     Have no one to talk to? Feel free to contact any of our councellors. They are always here to lend you an ear.
                 </div>
-                <button class="but-style" onclick="checksigninforcoun()">
+                <button class="but-style " onclick="checksigninforcoun() ">
                     Take a look !
                 </button>
             </div>
-            <div class="imgrgt">
-                <img class="imgr" src="static/images/v24_3.png" alt="face recon">
+            <div class="imgrgt ">
+                <img class="imgr " src="static/images/v24_3.png " alt="face recon ">
             </div>
         </div>
-        <div class="center">
-            <button class="signoutbut" onclick="signOut()">
+        <div class="center ">
+            <button class="signoutbut " onclick="signOut() ">
                 Sign Out
             </button>
         </div>
@@ -329,36 +329,36 @@
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js " integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49 " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js " integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy " crossorigin="anonymous "></script>
 
     <!-- Firebase -->
 
-    <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase.js "></script>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js "></script>
 
     <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-analytics.js "></script>
     <!-- Add Firebase products that you want to use -->
-    <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-auth.js "></script>
 
-    <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-database.js "></script>
 
 
     <script>
         // Your web app's Firebase configuration
         var firebaseConfig = {
-            apiKey: "AIzaSyCdTxcXKZduVB3m_YdHoxKYsXxPPppzWI4",
-            authDomain: "vyavahaar-mentalhealthcare.firebaseapp.com",
-            databaseURL: "https://vyavahaar-mentalhealthcare-default-rtdb.firebaseio.com/",
-            projectId: "vyavahaar-mentalhealthcare",
-            storageBucket: "vyavahaar-mentalhealthcare.appspot.com",
-            messagingSenderId: "1088638899783",
-            appId: "1:1088638899783:web:0244785d45dea7132dc362",
-            measurementId: "G-1T7PTWPJCR"
+            apiKey: "AIzaSyCdTxcXKZduVB3m_YdHoxKYsXxPPppzWI4 ",
+            authDomain: "vyavahaar-mentalhealthcare.firebaseapp.com ",
+            databaseURL: "https://vyavahaar-mentalhealthcare-default-rtdb.firebaseio.com/ ",
+            projectId: "vyavahaar-mentalhealthcare ",
+            storageBucket: "vyavahaar-mentalhealthcare.appspot.com ",
+            messagingSenderId: "1088638899783 ",
+            appId: "1:1088638899783:web:0244785d45dea7132dc362 ",
+            measurementId: "G-1T7PTWPJCR "
         };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
@@ -368,7 +368,7 @@
 
 
     <!-- Custom JavaScript -->
-    <script src="static/app.js"></script>
+    <script src="static/app.js "></script>
 </body>
 
 </html>
