--- a/public/about/index.html
+++ b/public/about/index.html
@@ -33,7 +33,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#footer">Home</a>
+                            <a class="nav-link" href="/">Home</a>
                         </li>
 
                     </ul>
