--- a/public/about/index.html
+++ b/public/about/index.html
@@ -183,7 +183,7 @@
 
             </div>
             <div class="col-md-1">
-                <button class="btn btn-primary sndbtn">send</button>
+                <button class="btn  sndbtn">send</button>
             </div>
 
 
