integrated self_help pages

--- a/public/questionnaire/q/result.html
+++ b/public/questionnaire/q/result.html
@@ -57,7 +57,7 @@
 
     .txts {
         font-size: 35px;
-        font-weight: 300;
+        font-weight: 500;
         color: #761678;
         padding-left: 16px;
         padding-top: 16px;
@@ -66,7 +66,7 @@
     .forscore{
         font-size: 30px;
         font-weight: 300;
-        color: #a130a3;
+        color: #9a5e9b;
         padding-left: 16px;
         padding-top: 16px;
     }
@@ -94,26 +94,26 @@
     </div>
     <div class="cont">
         <div class="div-txt">
-            <p class="txt"> Report 
+            <p class="txt" > REPORT
                
             </p>
-            <p class="txts">Anxiety
-                <p id="Anxiety" class="forscore">
-                    <!-- anxiety-score -->
-                </p>
+            <p class="txts">Anxiety:   &nbsp;&emsp14;&emsp14;&emsp14;&emsp14;&emsp14; &emsp14;&emsp14;&emsp14;  <!-- anxiety-score -->
+                <br>
+                <a href="/questionnaire/selfHelpAnxiety" style="font-size: medium; color: #a130a3; margin-right: 15px;">Some Anxiety relieving tips and tricks</a>
+                <br>
+                <br>
+
+            </p>
+            <p class="txts">Stress: &emsp14;&emsp14;&emsp14;&emsp14;&emsp14;&emsp14;&emsp14;&emsp14;&emsp14;&emsp14;&emsp14;&emsp14; <!-- stress-score -->
+                <br>
+                <a href="/questionnaire/selfHelpStress" style="font-size: medium; color: #a130a3; margin-right: 15px;">Some Stress relieving tips and tricks</a>
+                <br>
                 <br> 
             </p>
-            <p class="txts">Stress
-                <p id="Stress" class="forscore">
-                    <!-- stress-score -->
-                </p> 
-                <br> 
-            </p>
-            <p class="txts" >Depression
-                <p id="Depression" class="forscore">
-                    <!-- depression-score -->
-                </p>
-                <br><br>
+            <p class="txts" >Depression: &emsp14;&emsp14;&emsp14;   <!-- depression-score -->
+               <br>
+                <a href="/questionnaire/selfHelpDepp" style="font-size: medium; color: #a130a3; margin-right: 15px;">Some Deppression relieving tips and tricks</a>
+                <br><br><br>
             </p>
             <button class="but-style" onclick="document.location='/'">Home Page</button>
         </div>
