Display name of the user

--- a/public/index.html
+++ b/public/index.html
@@ -203,6 +203,8 @@
 
     <div class="topnav">
         <img class="logo" src="static/images/logo.jpeg" width="80" height="80" alt="logo">
+        <p>Welcome</p>
+        <p id = "fullname"></p>
         <a href="static/login.html">Login</a>
         <a href="/about">About</a>
         <a class=" active " href="#home ">Home</a>
