--- a/public/index.html
+++ b/public/index.html
@@ -203,9 +203,7 @@
 
     <div class="topnav">
         <img class="logo" src="static/images/logo.jpeg" width="80" height="80" alt="logo">
-        <p>Welcome</p>
-        <p id = "fullname"></p>
-        <a href="static/login.html">Login</a>
+        <a href="static/login/login.html">Login</a>
         <a href="/about">About</a>
         <a class=" active " href="#home ">Home</a>
     </div>
@@ -233,7 +231,8 @@
 
 
         </div>
-        <div class="newtxt ">Our Services</div>
+        
+        <div id = "fullname" class="newtxt ">Our Services</div>
         <div class="rwcont ">
 
             <br>
@@ -244,7 +243,7 @@
                 <div class="txts ">
                     Click a photo! Our state of the art face recognition system will identify your emotions and generate a personalised report.
                 </div>
-                <button class="but-style " onclick="checksigninforphoto() ">
+                <button class="but-style " onclick="checksigninforphoto()">
                     Try it now!
                 </button>
             </div>
@@ -265,7 +264,7 @@
                 <div class="txts ">
                     Answer these personally curated questions so that we get little more insight about your troubles.
                 </div>
-                <button class="but-style " onclick="checksigninforques() ">
+                <button class="but-style " onclick="checksigninforques()">
                     Try the test!
                 </button>
             </div>
@@ -370,7 +369,7 @@
 
 
     <!-- Custom JavaScript -->
-    <script src="static/app.js "></script>
+    <script src="static/login/app.js"></script>
 </body>
 
 </html>
