--- a/public/photo/index.html
+++ b/public/photo/index.html
@@ -1,99 +1,92 @@
-<html>
-
-<head>
-    <title> face_recog</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
-</head>
-<style>
-    body {
-        font-family: 'Nunito', sans-serif;
-        margin: 0;
-    }
-
-    .nav {
-        background-color: #761678;
-        height: 60px;
-        width: 100%;
-        color: white;
-    }
-
-    .cont {
-        display: flex;
-        height: 700px;
-        margin-left: 8%;
-        margin-right: 4%;
-        margin-top: 5%;
-    }
-
-    .div-img {
-        width: 60%;
-        height: 700px;
-
-    }
-
-    .div-txt {
-        width: 50%;
-        height: 700px;
-
-    }
-
-    .ques-image {
-
-        display: block;
-        width: 800px;
-        margin: auto;
-        padding: 0% 4% 4% 4%;
-    }
-
-    .txt {
-        font-size: 60px;
-        font-weight: 500;
-        color: #761678;
-        padding-left: 16px;
-        padding-top: 16px;
-    }
-
-    .txts {
-        font-size: 38px;
-        font-weight: 300;
-        color: #761678;
-        padding-left: 16px;
-        padding-top: 16px;
-    }
-
-    .but-style {
-        padding: 8px;
-        background-color: #761678;
-        border: none;
-        border-radius: 16px;
-        color: white;
-        font-weight: 500;
-        width: 250px;
-        height: 50px;
-        font-size: 25px;
-    }
-</style>
-<script>
-
-</script>
-
-<body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Emotion Detection | Vyavahaar</title>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.25/webcam.js"
+    ></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="\static\photo\style.css" />
+    <!-- <link rel="shortcut icon" href=/static/logo.png" type="image/x-icon"> -->
+  </head>
+  <body>
     <div class="nav">
-        <p style="padding: 5px; font-size: 20px; color:white; float: right; font-weight: 500;" onclick="document.location='/'"> home </p>
+      <a href="\"
+        ><p
+          style="
+            padding: 5px;
+            font-size: 20px;
+            color: white;
+            float: left;
+            font-weight: 500;
+            padding-left: 10px;
+          "
+        >
+          Home
+        </p></a
+      >
     </div>
-    <div class="cont">
-        <div class="div-txt">
-            <p class="txt"> Say Cheese! </p>
-            <p class="txts">Click a photo! Our state of the art face recognition system will identify your emotions and
-                generate a personalised report.<br><br> </p>
-            <button class="but-style">Get Started</button>
-        </div>
+    <div style="margin-top: 5px; margin-bottom: 20px">
+      <p class="txt">Say Cheese!</p>
+      <p class="txts">
+        Click a photo! Our state of the art face recognition system will
+        identify your emotions and generate a personalised report.<img
+          class="ques-image"
+          src="/static/photo/face.jpg"
+          alt="face"
+        /><br />
+      </p>
+      <div class="unit">
+        <div id="camera"></div>
+        <br />
+        <input
+          type="button"
+          value="Take a Snap and Download Picture"
+          id="btPic"
+          onclick="takeSnapShot()"
+        />
 
-        <div class="div-img">
-            <img class="ques-image" src="static/face.jpg" alt="Quiz">
-        </div>
+        <input
+          type="button"
+          value="Proceed Further"
+          onclick=" location.href= '/detect' "
+        />
+      </div>
     </div>
-</body>
 
+    <div id="results" style="display: none"></div>
+  </body>
+
+  <script>
+    // CAMERA SETTINGS.
+    Webcam.set({
+      width: 480,
+      height: 480,
+      image_format: "jpeg",
+      jpeg_quality: 100,
+      flip_horiz: true,
+    });
+    Webcam.attach("#camera");
+
+    // TAKE A SNAPSHOT.
+    takeSnapShot = function () {
+      Webcam.snap(function (data_uri) {
+        downloadImage("yourface", data_uri);
+      });
+    };
+
+    // DOWNLOAD THE IMAGE.
+    downloadImage = function (name, datauri) {
+      var a = document.createElement("a");
+      a.setAttribute("download", name + ".png");
+      a.setAttribute("href", datauri);
+      a.click();
+    };
+  </script>
 </html>
