--- a/public/about/index.html
+++ b/public/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>About</title>
+    <title>About | Vyavahaar</title>
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/6df8c8fe62.js" crossorigin="anonymous"></script>
     <!-- Fonts -->
