--- a/public/index.html
+++ b/public/index.html
@@ -211,7 +211,7 @@
         <img class=" " src="static/images/v14_1.png " width="100% " height="730 " alt="Vyavhaar ">
         <div class="v14_2 "></div>
         <span class="v14_3 ">You Are Not Alone</span>
-        <span class="v14_4 ">We’re here to listen</span>
+        <span class="v14_4 ">We are here to listen</span>
     </div>
     <div class="cont ">
 
