--- a/public/questionnaire/index.html
+++ b/public/questionnaire/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title> questionnair</title>
+    <title> Questionnair | Vyavahaar</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 </head>
@@ -82,7 +82,7 @@
 <body>
     <div class="nav">
         <p style="padding: 5px; font-size: 20px; color:white; float: right; font-weight: 500;"
-            onclick="document.location='/'"> home </p>
+            onclick="document.location='/gethelp'"> Talk to Someone =)s</p>
     </div>
     <div class="cont">
         <div class="div-txt">
