--- a/public/counsellor/index.html
+++ b/public/counsellor/index.html
@@ -89,7 +89,7 @@
         <div class="feature-box col-lg-4">
           <i class="icon fas fa-bullseye fa-4x"></i>
           <h3 class="feature-title">NO DISHONESTY UNDER ANY CIRCUMSTANCES</h3>
-          <p>Honestly! If you’re having a great week, be honest. If you’re struggling with sessions or homework, your therapist will help you find a way to make this easier.</p>
+          <p>Honestly! If you are having a great week, be honest. If you are struggling with sessions or homework, your therapist will help you find a way to make this easier.</p>
         </div>
  
         <div class="feature-box col-lg-4">
