--- a/public/questionnaire/index.html
+++ b/public/questionnaire/index.html
@@ -82,7 +82,7 @@
 <body>
     <div class="nav">
         <p style="padding: 5px; font-size: 20px; color:white; float: right; font-weight: 500;"
-            onclick="document.location='/gethelp'"> Talk to Someone =)s</p>
+            onclick="document.location='/'">Home </p>
     </div>
     <div class="cont">
         <div class="div-txt">
