--- a/public/questionnaire/q/result.html
+++ b/public/questionnaire/q/result.html
@@ -115,7 +115,7 @@
                 <a href="/questionnaire/selfHelpDepp" style="font-size: medium; color: #a130a3; margin-right: 15px;">Some Deppression relieving tips and tricks</a>
                 <br><br><br>
             </p>
-            <button class="but-style" onclick="document.location='/'">Home Page</button>
+            <button class="but-style" onclick="document.location='/gethelp'">Talk to Someone =)</button>
         </div>
 
         <div class="div-img">
