--- a/public/vent/index.html
+++ b/public/vent/index.html
@@ -51,7 +51,7 @@
 
 
     </div>
-
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase.js"></script>
     <script src="static/vent/app.js"></script>
 
