--- a/public/about/index.html
+++ b/public/about/index.html
@@ -109,7 +109,7 @@
                     <div class="card-content">
                         <div class="card-body ">
 
-                            <div class="card-title">Hritik Rajan</div>
+                            <div class="card-title">Hritik Ranjan</div>
                             <div class="card-subtitle">
                                 <p class="text-muted"> <small class="text-muted"> What defines him is his uniqueness in bracketing real world issues and solving these problems with whatever data or tech stack
                                     required. His obvious taste attraction lies in concepts of Computing Fundamentals, even better with 4 tea spoons of UI designing </small></p>
@@ -139,7 +139,7 @@
                     <div class="card-content">
                         <div class="card-body ">
 
-                            <div class="card-title"> Rajadini Yadav </div>
+                            <div class="card-title"> Rajnandini Yadav </div>
                             <div class="card-subtitle">
                                 <p> <small class="text-muted">She is E cell Head of Entrepreneurship cell VIT Bhopal. She has a great leadership quality and passionate about consulting,  management, and analytics. </small></p>
                             </div>
@@ -150,7 +150,7 @@
                     <div class="card-content">
                         <div class="card-body ">
 
-                            <div class="card-title"> Srijan Srivastava</div>
+                            <div class="card-title"> Srijan Shrivastava</div>
                             <div class="card-subtitle">
 
                                 <p><small class="text-muted"> He is passionate about problem-solving and his skillset includes JAVA, Python, C++. He is always enthusiastic about
@@ -199,7 +199,7 @@
         <p>© Copyright 2021 Vyavahar</p>
 
     </footer>
-
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase.js"></script>
     <script>
         var firebaseConfig = {
@@ -228,9 +228,9 @@
                     email: email.value,
                     message: msg.value
                 });
-                alert("message sent")
+                swal("message sent", "Will contact you", "success");
             } else {
-                alert("invalid email");
+                swal("invalid email", "", "error");
             }
             email.value = "";
             msg.value = "";
