--- a/public/questionnaire/index.html
+++ b/public/questionnaire/index.html
@@ -13,7 +13,7 @@
     }
 
     .nav {
-        background-color: #761678;
+        
         height: 60px;
         width: 100%;
         color: white;
@@ -81,7 +81,7 @@
 
 <body>
     <div class="nav">
-        <p style="padding: 5px; font-size: 20px; color:white; float: right; font-weight: 500;"
+        <p style="padding-top: 5px;  padding-left: 4%; font-size: 20px; color:purple; font-weight: 500;"
             onclick="document.location='/'">Home </p>
     </div>
     <div class="cont">
