--- a/public/questionnaire/q/index.html
+++ b/public/questionnaire/q/index.html
@@ -2,6 +2,7 @@
 <html lang="en" xml:lang="en">
     <head>
         <title>Quiz</title>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
         <link rel="stylesheet" href="/static/questionnaire/q/ques.css">
     </head>
     <body>
